@@ -3,6 +3,7 @@ Version 0.6
  logger optimisation: remove all spaces in obd streams
  logger: add a serial port communications log
  logger: move capabilities into its own file, add features
+ logger: Only create database columns, and only try to log, supported pids
 
 Version 0.5 (released 2009-05-22)
  Move common obdinfo into its own library
